VirtualThreads, CRC32C, Safe-IO & AutoSerializable implementation